add jUnit, jacoco, tests for fun transfer

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
+    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.9.23'
+    id 'jacoco'
 }
 
 group = 'org.example'
@@ -10,11 +12,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
 
 kotlin {
